Add upload tests to Streaming Service